--- a/assets/sass/partials/_style.scss
+++ b/assets/sass/partials/_style.scss
@@ -162,7 +162,7 @@ section {
                 a {
                     display: inline-block;
                     padding: 0 0 5px 0;
-                    color: #A3A3A3;
+                    color: #444444;
                     font-size: 14px;
                     text-decoration: none;
                     word-break: break-all;
@@ -436,4 +436,10 @@ ul {
 .fadeIn {
   -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
+}
+
+span {
+    &.subitem {
+        font-weight: bold;
+    }
 }
